cicd/argo/gitops-kustomize/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blogmd-dev
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
