cicd/argo/gitops-kustomize/overlays/dev/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: blogmd
  namespace: blogmd  
  labels:
    app: blogmd
spec:
  subdomain: blogmd-dev
  tls:
    termination: edge
  to:
    kind: Service
    name: blogmd
